DRAKEN-3268: Fix review comments
